feat: add more docu
